welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.error
monkeyTrouble:4: error: not found: value &
    case (aSmile == false & bSmile == false) => return true
                          ^monkeyTrouble:4: error: not found: value ==
    case (aSmile == false & bSmile == false) => return true
                 ^monkeyTrouble:4: error: not found: value ==
    case (aSmile == false & bSmile == false) => return true
                                   ^